tools/architecture/validate-source-imports/tests/fixtures/invalid/feature-imports-postgres/src/index.ts
import { db } from "@platform/adapters-postgres";
export const packageName = "@platform/feature-workflow";
